--- a/app/src/views/home/login.html
+++ b/app/src/views/home/login.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="/js/home/login.js"></script>
     <title>로그인</title>
 </head>
 <body>
     <input type="text" placeholder="아이디"><br>
     <input type="text" placeholder="비번"><br>
-    <button>입력</button>
+    <button>로그인</button>
 </body>
 </html>
