--- a/app/src/views/home/login.html
+++ b/app/src/views/home/login.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <input id="id" type="text" placeholder="아이디"><br>
-    <input id="pw" type="text" placeholder="비번"><br>
+    <input id="pw" type="password" placeholder="비번"><br>
     <button>로그인</button>
 </body>
 </html>
