--- a/app/src/views/home/register.html
+++ b/app/src/views/home/register.html
@@ -6,29 +6,41 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/css/home/login.css">
     <script src="/js/home/login.js" defer></script>
-    <title>로그인</title>
+    <title>회원가입</title>
 </head>
 <body>
     <div class="login-box">
-        <h2>Login</h2>
+        <h2>Sign Up</h2>
         <form>
           <div class="user-box">
             <input type="text" id="id" required="">
             <label>User Id</label>
           </div>
           <div class="user-box">
+            <input type="text" id="name" required="">
+            <label>Name</label>
+          </div>
+          <div class="user-box">
+            <input type="text" id="email" required="">
+            <label>Email</label>
+          </div>
+          <div class="user-box">
             <input type="password" id="pw" required="">
             <label>Password</label>
           </div>
+          <div class="user-box">
+            <input type="password" id="Confirm-pw" required="">
+            <label>Password Confirm</label>
+          </div>
           <div class="ath">
-            Not registered? <a class="account" href="/register">Create an account</a>
+            Already registered? <a class="homeback" href="/login">Login</a>
           </div>
           <a class="sub" href="#">
             <span></span>
             <span></span>
             <span></span>
             <span></span>
-            Login
+            Sign up
           </a>
         </form>
       </div>
